Changes storage of and access to training, emoji data
Replaces the hrv-training-history table with
hrv-user-data table. The new table is meant to store
data associated with a particular user and day.
Currently that includes minutes of training and emojis.
Changes reminders to work with that table  and provides
lambda function for fetching data from it.
