# swagger.yaml
@@ -243,23 +243,6 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/Error'
-      options:
-        consumes:
-        - application/json
-        produces:
-        - application/json
-        responses:
-          '200':
-            description: 200 response
-            schema:
-              $ref: "#/definitions/Empty"
-            headers:
-              Access-Control-Allow-Origin:
-                type: string
-              Access-Control-Allow-Methods:
-                type: string
-              Access-Control-Allow-Headers:
-                type: string
       security:
         - basic-user: []
       x-amazon-apigateway-integration:
@@ -273,6 +256,117 @@ paths:
         httpMethod: POST
         contentHandling: CONVERT_TO_TEXT
         type: aws_proxy
+    options:
+      tags:
+        - users
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: 200 response
+          schema:
+            $ref: "#/definitions/Empty"
+          headers:
+            Access-Control-Allow-Origin:
+              type: string
+            Access-Control-Allow-Methods:
+              type: string
+            Access-Control-Allow-Headers:
+              type: string
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: 200
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        passthroughBehavior: when_no_match
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        type: mock
+  '/users/{user_id}/data':
+    get:
+      tags:
+        - users
+      summary: Get the data (training minutes, emojis) for the given user and time period
+      description: ''
+      operationId: getUserData
+      parameters:
+        - in: path
+          name: user_id
+          type: string
+          required: true
+          description: id of the user whose data we're fetching
+        - in: query
+          name: start
+          type: number
+          required: true
+          description: start date (YYYYMMDD) of the range to fetch
+        - in: query
+          name: end
+          type: number
+          required: true
+          description: end date (YYYYMMDD) of the range to fetch
+      responses:
+        '200':
+          description: Expected response
+          schema:
+            $ref: '#/definitions/UserDataList'
+        '400':
+          description: Bad request error
+          schema:
+            $ref: '#/definitions/Error'
+        '500':
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/Error'
+      security:
+        - basic-user: []
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: '200'
+        uri: >-
+          arn:aws:apigateway:<region>:lambda:path/2015-03-31/functions/arn:aws:lambda:<region>:<account_id>:function:<function_name>/invocations
+        credentials: 'arn:aws:iam::<account_id>:role/api-gateway-lambda-and-logs'
+        passthroughBehavior: when_no_match
+        httpMethod: POST
+        contentHandling: CONVERT_TO_TEXT
+        type: aws_proxy
+    options:
+      tags:
+        - users
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: 200 response
+          schema:
+            $ref: "#/definitions/Empty"
+          headers:
+            Access-Control-Allow-Origin:
+              type: string
+            Access-Control-Allow-Methods:
+              type: string
+            Access-Control-Allow-Headers:
+              type: string
+      x-amazon-apigateway-integration:
+        responses:
+          default:
+            statusCode: 200
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        passthroughBehavior: when_no_match
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        type: mock
   '/users/messages/{user_id}':
     get:
       tags:
@@ -452,6 +546,28 @@ definitions:
       - first_name
       - last_name
       - photoUrl
+  UserData:
+    type: object
+    properties:
+      userId:
+        type: string
+      date:
+        type: number
+      minutes:
+        type: number
+      emoji:
+        type: array
+        items:
+          type: object
+          properties:
+            from:
+              type: string
+            emoji:
+              type: string
+  UserDataList:
+    type: array
+    items:
+      $ref: '#/definitions/UserData'
   UserList:
     type: array
     items:
